2006-12-19  Matthias Wimmer  <m@tthias.eu>

    * jabberd/mio_ssl.c: reverted default to SSL_CTX_use_certificate_file()
    * jabberd/lib/messages.c: do not abort jabberd14 on locale failure

2006-12-18  Matthias Wimmer  <m@tthias.eu>

    * dialback/dialback.c: fixing typo
    * jsm/modules/mod_agents.c: fix in handling the jabber:iq:agents namespace

2006-12-17  Matthias Wimmer  <m@tthias.eu>

    * jabberd/mio_ssl.c: by default using SSL_CTX_use_certificate_chain_file()
    * jsm/modules/mod_presence.c: compatibility improvement for roster sync
    * jsm/modules/mod_privacy.c: send pres unavailable for new privacy item,
	compare group according to the resourceprep profile
    * jsm/modules/mod_xml.c: setting to improve compatibility with old clients

2006-12-11  Matthias Wimmer  <m@tthias.eu>

    * jabberd/lib/xmlnode.c: fix: handle language variants

2006-12-10  Matthias Wimmer  <m@tthias.eu>

    * jsm/modules/mod_vcard.c: using updated identity of user directories
    * jabberd/base/base_importspool.c: importing filespools to SQL
    * jabberd/config.c: same
    * jabberd/lib/expat.c: same
    * jabberd/lib/jabberdlib.h: same
    * jabberd/base/Makefile.am: same
    * jabberd/base/base.c: same
    * jabberd/jabberd.cc: same

2006-12-09  Matthias Wimmer  <m@tthias.eu>

    * jabberd/mio_ssl.c: changed behaviour: using dNSName for cert
	verification also if id-on-xmppAddr is present. (RFC 3920bis)
    * jabberd/lib/xmlnode.c: possibility to add different languages to config
    * jabberd/lib/jabberdlib.h: same
    * jsm/jsm.h: same
    * jsm/authreg.c: same
    * jsm/modules/mod_vcard.c: same
    * jsm/modules/mod_auth_digest.c: same
    * jsm/modules/mod_browse.c: same
    * jsm/modules/mod_disco.c: same
    * jsm/modules/mod_last.c: same
    * jsm/modules/mod_presence.c: same
    * jsm/modules/mod_useridpolicy.c: same
    * jsm/modules/mod_agents.c: same
    * jsm/modules/mod_log.c: same
    * jsm/modules/mod_offline.c: same